Archive2/58/82940fc737ebeb/output
main.cpp:22:5: error: no matching function for call to 'f'
    f(23); // fails
    ^
main.cpp:16:6: note: candidate function not viable: no known conversion from 'int' to 'nonnegative' for 1st argument
void f(nonnegative x) {
     ^
1 error generated.
